-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
-
(copied to CRM)
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
If a given plan cache entry is too large, for example due to having a large $in list and therefore, a lot of index bounds, we can run into the BSON size limit and error during execution of the $planCacheStats stage. This severely hampers debuggability as seen in HELP-89371 since we cannot inspect the plan cache.
The error message is:
MongoServerError: Executor error during aggregate command on namespace: test.a :: caused by :: Serializing Document failed :: caused by :: Size 35668515 exceeds maximum 16793600
- causes
-
SERVER-123500 Prevent huge_plan_cache_entry.js from running on incompatible configurations
-
- Closed
-