SERVER-120614 Truncate large plan cache entries when outputting them (#50174)

GitOrigin-RevId: 35ec47c05274d0ec03cd2447d6c44885a7725583